tests/tooling/fixtures/native/recovery/negative/negative_global_const_reference_self_initializer.objc3
// Expected diagnostic code(s): O3S210.
module NegativeGlobalConstReferenceSelfInitializer;

let total = total + 1;

fn main() -> i32 {
  return total;
}
